force-app/main/default/objects/COMM_SAPMapping__mdt/COMM_SAPMapping__mdt.object-meta.xml
<CustomObject>
    <description>Metadata with the mapping between Salesforce SObjects and expected JSON object from SAP</description>
    <label>SAP Mapping</label>
    <pluralLabel>SAP Mappings</pluralLabel>
</CustomObject>