force-app/main/default/objects/COMM_SAPMapping__mdt/fields/COMM_AdditionalProduct__c.field-meta.xml
<CustomField>
    <fullName>COMM_AdditionalProduct__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to indicate mapping for another product (ex: Card in Subscription)</description>
    <label>Additional Product</label>
    <type>Checkbox</type>
</CustomField>