force-app/main/default/objects/COMM_SAPMapping__mdt/fields/COMM_FieldApiName__c.field-meta.xml
<CustomField>
    <fullName>COMM_FieldApiName__c</fullName>
    <description>API Name of the Salesforce Field to be mapped with SAP</description>
    <label>Field API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>