force-app/main/default/objects/COMM_SAPMapping__mdt/listViews/COMM_LV_All.listView-meta.xml
<ListView>
    <fullName>COMM_LV_All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>COMM_Field__c</columns>
    <columns>COMM_SObjectApiName__c</columns>
    <columns>COMM_FieldApiName__c</columns>
    <columns>COMM_AdditionalProduct__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>